# AnalystAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/configs/: app_config.py  log_config.py
src/routers/: __init__.py  agent.py
