[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.4",
    "langgraph==1.0.8",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "pydantic-settings==2.12.0",
    "uvicorn==0.40.0",
]
